--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">
+			holiday trip for parents
+		</li>
+		<li data-ns-test="shoppingList">
+			new car
+		</li>
+		<li data-ns-test="shoppingList">
+			rangeover
+		</li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">
+			Switzerland
+		</li>
+		<li data-ns-test="holidayList">
+			New zealand
+		</li>
+		<li data-ns-test="holidayList">
+			Australia
+		</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
